--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,18 @@
-# Python
+# Python cache
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 
-# Virtual environment
+# Virtual env
 .venv/
 venv/
 
-# Django
-db.sqlite3
-*.log
-local_settings.py
-
-# Environment variables
+# Env file (keep only .env.example committed)
 .env
 
-# OS / Editor
+# OS / IDE
 .DS_Store
 Thumbs.db
 .vscode/
-
-# Docker
-*.env
+.idea/
