chore: remove .env from git tracking

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
+DJANGO_SECRET_KEY=your-secret-key
+DEBUG=True
+
 DB_NAME=viscart
-DB_USER=viscart
-DB_PASSWORD=
-DB_HOST=127.0.0.1
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
 DB_PORT=5432
 
-DJANGO_SECRET_KEY=
-DJANGO_DEBUG=1
-ALLOWED_HOSTS=localhost,127.0.0.1,tenant1.localhost
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+TELEGRAM_CHAT_ID=your-telegram-chat-id
